# air-ctrl

./: .gitignore  LICENSE  README.md
docs/: air-ctrl.drawio  datasheets.md
firmware/: .gitignore  CMakeLists.txt  Kconfig  README.md  live_plot.sh  prj.conf  prj_bsec.conf  west.yml
firmware/boards/air_ctrl/: Kconfig.air_ctrl  air_ctrl-pinctrl.dtsi  air_ctrl.dts  air_ctrl.yml  air_ctrl_defconfig  board.yml
firmware/logging/: live_plot.py
firmware/patches/: zephyr-bme680.patch
firmware/src/: air_ctrl_bt.c  air_ctrl_bt.h  air_ctrl_sensor.h  air_ctrl_sensor_bsec.c  air_ctrl_sensor_raw.c  main.c
hardware/: air-ctrl.kicad_pcb  air-ctrl.kicad_pro  air-ctrl.kicad_sch  connectors.kicad_sch  display.kicad_sch  fabrication-toolkit-options.json  mcu.kicad_sch  power.kicad_sch  sensor.kicad_sch
hardware/libraries/BME688/: BME688.kicad_sym  IC_BME688.kicad_mod
hardware/libraries/S2B_PH_SM4_TB/: JST_S2B-PH-SM4-TB.kicad_mod
hardware/libraries/SFV24R_2STE1HLF/: AMPHENOL_SFV24R-2STE1HLF.kicad_mod  SFV24R-2STE1HLF.kicad_sym  SFV24R-2STE1HLF.step
hardware/libraries/USB4085_GF_A/: GCT_USB4085-GF-A_REVB.kicad_mod
